# BWT-and-Alignment

Alignment/Needleman-Wunsch/: alignment_algorithms.py  data_generator.py  tester.py
Alignment/Wavefront/: CMakeLists.txt  main.cpp  tester.cpp
Alignment/Wavefront/WFA/: CMakeLists.txt
Alignment/Wavefront/WFA/system/: profiler_counter.h
BWT/: BWT.ipynb
